--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=database,1433;Database=FinShark;Initial Catalog=FinShark;User id=sa;Password=FinShark_DROWSSAP_@S;Encrypt=False;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
